--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <!DOCTYPE html>
 <html>
   <head>
-    <title>PDF Viewer</title>
+    <title>የህክምና  ማስረጃ</title>
     <style>
       body {
         margin: 0;
