--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
         margin: 0;
         padding: 0;
         font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
       }
       #pdf-container {
-        width: 100%;
+        /* width: 100%; */
         height: 100vh;
         display: flex;
         align-items: center;
@@ -31,10 +32,37 @@
         margin-bottom: 20px;
       }
       #pdf-viewer {
-        width: 800px;
+          background-color: white;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        max-width: 800px;
+        width: 90%;
+        max-height: 600px;
+        height: 90%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        /* width: 800px;
         height: 600px;
         border: 1px solid #ccc;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
+      }
+       #pdf-viewer embed {
+        width: 100%;
+        height: 100%;
+      }
+      
+      @media (max-width: 600px) {
+        #pdf-viewer {
+          padding: 10px;
+        }
+        h1 {
+          font-size: 18px;
+        }
       }
     </style>
   </head>
