--- a/index.html
+++ b/index.html
@@ -1,4 +1,71 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>PDF Viewer</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+      }
+      #pdf-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+      }
+      #pdf-viewer {
+        background-color: white;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        max-width: 800px;
+        width: 90%;
+        max-height: 600px;
+        height: 90%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+      h1 {
+        font-size: 24px;
+        margin-bottom: 20px;
+      }
+      #pdf-viewer embed {
+        width: 100%;
+        height: 100%;
+      }
+      
+      @media only screen and (max-width: 600px) {
+        #pdf-container {
+          height: auto;
+        }
+        #pdf-viewer {
+          padding: 10px;
+          max-width: 100%;
+          width: 100%;
+          max-height: none;
+          height: auto;
+        }
+        h1 {
+          font-size: 18px;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div id="pdf-container">
+      <div id="pdf-viewer">
+        <h1>PDF Viewer</h1>
+        <embed src="የህክምና ማስረጃ.pdf" type="application/pdf" />
+      </div>
+    </div>
+  </body>
+</html>
+<!-- 
 
  <!DOCTYPE html>
 <html>
@@ -9,10 +76,9 @@
         margin: 0;
         padding: 0;
         font-family: Arial, sans-serif;
-        background-color: #f4f4f4;
       }
       #pdf-container {
-        /* width: 100%; */
+        width: 100%;
         height: 100vh;
         display: flex;
         align-items: center;
@@ -32,37 +98,10 @@
         margin-bottom: 20px;
       }
       #pdf-viewer {
-          background-color: white;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        padding: 20px;
-        max-width: 800px;
-        width: 90%;
-        max-height: 600px;
-        height: 90%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-
-        /* width: 800px;
+        width: 800px;
         height: 600px;
         border: 1px solid #ccc;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
-      }
-       #pdf-viewer embed {
-        width: 100%;
-        height: 100%;
-      }
-      
-      @media (max-width: 600px) {
-        #pdf-viewer {
-          padding: 10px;
-        }
-        h1 {
-          font-size: 18px;
-        }
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       }
     </style>
   </head>
@@ -71,7 +110,7 @@
       <div id="pdf-viewer">
         <h1>ወ/ሮ ወርቅነሽ  አድማሱ
          የህክምና  ማስረጃ  </h1>
-           <!-- <h1> የህክምና  ማስረጃ  </h1> -->
+           <h1> የህክምና  ማስረጃ  </h1>
         <embed src="የህክምና ማስረጃ.pdf" width="100%" height="100%" type="application/pdf" />
         <h2>ስልክ ቁጥር ፡ 0920190671 ወይም 0910815966 </h2>
       </div>
@@ -79,4 +118,4 @@
     </div>
   </body>
 </html>
-
+ -->
