--- a/index.html
+++ b/index.html
@@ -1,59 +1,52 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>የህክምና  ማስረጃ</title>
+    <title>Document Viewer</title>
     <style>
       body {
         margin: 0;
         padding: 0;
         font-family: Arial, sans-serif;
       }
-      #pdf-container {
-        width: 100%;
-        height: 100%;
+      #container {
         display: flex;
-        align-items: center;
         justify-content: center;
+        align-items: center;
+        height: 100vh;
         background-color: #f4f4f4;
       }
-      h1 {
-        color: #dd0f0f;
-        text-align: center;
-        font-size: 26px;
-        margin-bottom: 20px;
+      #pdf-wrapper, #video-wrapper {
+        width: 100%;
+        height: 100%;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
       }
-      h2 {
-        color: #0d8d4f;
-        text-align: center;
-        font-size: 24px;
-        margin-bottom: 20px;
-      }
-      #pdf-viewer {
-        width: 800px;
-        height: 600px;
+      #pdf-viewer, #video-player {
+        width: 100%;
+        height: 80%;
         border: 1px solid #ccc;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      }
-      
-      @media (max-width: 768px) {
-        #pdf-container {
-          align-items: flex-start;
-        }
-        #pdf-viewer {
-          width: 90vw;
-          height: 90vh;
-        }
       }
     </style>
   </head>
   <body>
-    <div id="pdf-container">
-      <div id="pdf-viewer">
-        <h1>ወ/ሮ ወርቅነሽ  አድማሱ
-         የህክምና  ማስረጃ  </h1>
-        <embed src="የወርቅነሽ_አድማሱ_ህክምና_ማስረጃ_1.pdf" width="100%" height="100%" type="application/pdf" />
-        <h2>ስልክ ቁጥር ፡ 0920190671 ወይም 0910815966 </h2>
+    <div  id="container">
+      <div id="video-wrapper">
+        <h1>Video Player</h1>
+        <video id="video-player" src="YouCut_20230712_162910183 (1).mp4" controls></video>
       </div>
     </div>
+    <div id="container">
+      <div id="pdf-wrapper">
+        <h1>PDF Viewer</h1>
+        <div id="pdf-viewer">
+          <embed src="የወርቅነሽ_አድማሱ_ህክምና_ማስረጃ_1.pdf" type="application/pdf" width="100%" height="100%" />
+        </div>
+      </div>
+    </div>
+    
   </body>
 </html>
