--- a/index.html
+++ b/index.html
@@ -1,52 +1,72 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Document Viewer</title>
+    <title>Toggle PDF Viewer</title>
     <style>
       body {
         margin: 0;
         padding: 0;
         font-family: Arial, sans-serif;
       }
-      #container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+      #pdf-container {
+        display: none;
+        width: 100%;
         height: 100vh;
+        align-items: center;
+        justify-content: center;
         background-color: #f4f4f4;
       }
-      #pdf-wrapper, #video-wrapper {
-        width: 100%;
-        height: 100%;
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-      }
-      #pdf-viewer, #video-player {
-        width: 100%;
-        height: 80%;
+      #pdf-viewer {
+        width: 800px;
+        height: 600px;
         border: 1px solid #ccc;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
+      #toggle-button {
+        padding: 10px 20px;
+        font-size: 16px;
+        margin-top: 20px;
+      }
+      #download-link {
+        display: none;
+      }
+      @media (max-width: 768px) {
+        #pdf-container {
+          display: flex;
+        }
+        #pdf-viewer {
+          width: 90vw;
+          height: 90vh;
+        }
+        #download-link {
+          display: block;
+          margin-top: 10px;
+          text-align: center;
+        }
       }
     </style>
   </head>
   <body>
-    <div  id="container">
-      <div id="video-wrapper">
-        <h1>Video Player</h1>
-        <video id="video-player" src="YouCut_20230712_162910183 (1).mp4" controls></video>
+    <button id="toggle-button">Toggle PDF Viewer</button>
+    <div id="pdf-container">
+      <div id="pdf-viewer">
+        <embed src="path/to/your/pdf/file.pdf" type="application/pdf" width="100%" height="100%" />
       </div>
     </div>
-    <div id="container">
-      <div id="pdf-wrapper">
-        <h1>PDF Viewer</h1>
-        <div id="pdf-viewer">
-          <embed src="የወርቅነሽ_አድማሱ_ህክምና_ማስረጃ_1.pdf" type="application/pdf" width="100%" height="100%" />
-        </div>
-      </div>
-    </div>
-    
+    <a id="download-link" href="path/to/your/pdf/file.pdf" download>Download PDF</a>
+    <script>
+      const toggleButton = document.getElementById('toggle-button');
+      const pdfContainer = document.getElementById('pdf-container');
+      const downloadLink = document.getElementById('download-link');
+
+      toggleButton.addEventListener('click', function() {
+        pdfContainer.style.display = pdfContainer.style.display === 'none' ? 'flex' : 'none';
+      });
+
+      // Check if the device screen width is less than or equal to 768 pixels (mobile view)
+      if (window.innerWidth <= 768) {
+        downloadLink.style.display = 'block';
+      }
+    </script>
   </body>
 </html>
