--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     <button id="toggle-button">Toggle PDF Viewer</button>
     <div id="pdf-container">
       <div id="pdf-viewer">
-        <embed src="path/to/your/pdf/file.pdf" type="application/pdf" width="100%" height="100%" />
+        <embed src="የወርቅነሽ_አድማሱ_ህክምና_ማስረጃ_1.pdf" type="application/pdf" width="100%" height="100%" />
       </div>
     </div>
-    <a id="download-link" href="path/to/your/pdf/file.pdf" download>Download PDF</a>
+    <a id="download-link" href="የወርቅነሽ_አድማሱ_ህክምና_ማስረጃ_1.pdf" download>Download PDF</a>
     <script>
       const toggleButton = document.getElementById('toggle-button');
       const pdfContainer = document.getElementById('pdf-container');
