--- a/index.html
+++ b/index.html
@@ -1,4 +1,40 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        .pdf-container{
+    position: relative;
+    padding-bottom: 75%;
+    height: 0;
+    overflow: hidden;
+}
+.pdf-container embed{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+    </style>
+    <title>Document</title>
+</head>
+<body>
+    <!-- <div class="pdf-container"> -->
+    <embed src="1.jpg" width="100%" height="600px"  contextmenu="return false;">
+        <embed src="2.jpg" width="100%" height="600px"  contextmenu="return false;">
+            <embed src="3.jpg" width="100%" height="600px"  contextmenu="return false;">
+                <embed src="4.jpg" width="100%" height="600px"  contextmenu="return false;">
+                    <embed src="5.jpg" width="100%" height="600px"  contextmenu="return false;">
+    <!-- </div> -->
+</body>
+</html>
+
+
+
+
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <title>Toggle PDF Viewer</title>
@@ -69,4 +105,4 @@
       }
     </script>
   </body>
-</html>
+</html> -->
