--- a/index.html
+++ b/index.html
@@ -4,29 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        .pdf-container{
-    position: relative;
-    padding-bottom: 75%;
-    height: 0;
-    overflow: hidden;
-}
-.pdf-container embed{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
+        .image-list{
+          display: flex;
+          flex-direction: column;
+        }
+        .image-list img{
+          margin-bottom: 10px;
+        }
     </style>
-    <title>Document</title>
+    <title>የወርቅነሽ አድማሱ ህክምና ማስረጃ</title>
 </head>
 <body>
-    <!-- <div class="pdf-container"> -->
-    <embed src="1.jpg" width="100%" height="600px"  contextmenu="return false;">
-        <embed src="2.jpg" width="100%" height="600px"  contextmenu="return false;">
-            <embed src="3.jpg" width="100%" height="600px"  contextmenu="return false;">
-                <embed src="4.jpg" width="100%" height="600px"  contextmenu="return false;">
-                    <embed src="5.jpg" width="100%" height="600px"  contextmenu="return false;">
+  <h1>የወርቅነሽ አድማሱ ህክምና ማስረጃ</h1>
+    <div class="image-list">
+    <img src="1.jpg" alt="1.jpg">
+        <img src="2.jpg" width="100%" height="600px"  contextmenu="return false;">
+            <img src="3.jpg" width="100%" height="600px"  contextmenu="return false;">
+                <img src="4.jpg" width="100%" height="600px"  contextmenu="return false;">
+                    <img src="5.jpg" width="100%" height="600px"  contextmenu="return false;">
     <!-- </div> -->
 </body>
 </html>
