--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <h1>የወርቅነሽ አድማሱ ህክምና ማስረጃ</h1>
     <div class="image-list">
     <img src="1.jpg" alt="1.jpg">
-        <img src="2.jpg" width="100%" height="600px"  contextmenu="return false;">
+    <img src="2.jpg" alt="2.jpg">
+        <!-- <img src="2.jpg" width="100%" height="600px"  contextmenu="return false;"> -->
             <img src="3.jpg" width="100%" height="600px"  contextmenu="return false;">
                 <img src="4.jpg" width="100%" height="600px"  contextmenu="return false;">
                     <img src="5.jpg" width="100%" height="600px"  contextmenu="return false;">
