--- a/index.html
+++ b/index.html
@@ -4,30 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        .image-list{
+        body {
+          margin: 0;
+          padding: 0;
+          font-family: Arial, sans-serif;
+        }
+        .container {
           display: flex;
           flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          height: 100vh;
+          background-color: #f4f4f4;
         }
-        .image-list img{
+        h1 {
+          color: #dd0f0f;
+          text-align: center;
+          font-size: 26px;
+          margin-bottom: 20px;
+        }
+        .image-list {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+        }
+        .image-list img {
           margin-bottom: 10px;
+          border: 1px solid #ccc;
+          border-radius: 5px;
+          box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
     </style>
     <title>የወርቅነሽ አድማሱ ህክምና ማስረጃ</title>
 </head>
 <body>
-  <h1>የወርቅነሽ አድማሱ ህክምና ማስረጃ</h1>
+  <div class="container">
+    <h1>የወርቅነሽ አድማሱ ህክምና ማስረጃ</h1>
     <div class="image-list">
-    <img src="1.jpg" alt="1.jpg">
-    <img src="2.jpg" alt="2.jpg">
-    <img src="3.jpg" alt="3.jpg">
-    <img src="4.jpg" alt="4.jpg">
-    <img src="5.jpg" alt="5.jpg">
-    <!-- <img src="1.jpg" alt="1.jpg"> -->
-        <!-- <img src="2.jpg" width="100%" height="600px"  contextmenu="return false;"> -->
-            <!-- <img src="3.jpg" width="100%" height="600px"  contextmenu="return false;"> -->
-                <!-- <img src="4.jpg" width="100%" height="600px"  contextmenu="return false;"> -->
-                    <!-- <img src="5.jpg" width="100%" height="600px"  contextmenu="return false;"> -->
-    <!-- </div> -->
+      <img src="1.jpg" alt="1.jpg">
+      <img src="2.jpg" alt="2.jpg">
+      <img src="3.jpg" alt="3.jpg">
+      <img src="4.jpg" alt="4.jpg">
+      <img src="5.jpg" alt="5.jpg">
+    </div>
+  </div>
 </body>
 </html>
 
