--- a/index.html
+++ b/index.html
@@ -17,17 +17,39 @@
         .image-list img{
           margin-bottom: 10px;
         }
+        #video-container {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #f4f4f4;
+      }
+      video {
+        max-width: 800px;
+        max-height: 600px;
+        width: 90%;
+        height: 90%;
+      }
     </style>
     <title>የወርቅነሽ አድማሱ ህክምና ማስረጃ</title>
 </head>
 <body>
   <h1>የወርቅነሽ አድማሱ ህክምና ማስረጃ</h1>
-    <div class="image-list">
+   <div> <div class="image-list">
     <img src="1.jpg" alt="1.jpg">
     <img src="2.jpg" alt="2.jpg">
     <img src="3.jpg" alt="3.jpg">
     <img src="4.jpg" alt="4.jpg">
     <img src="5.jpg" alt="5.jpg">
+    </div>
+    <div id="video-container">
+      <video controls>
+        <source src="G:\Tasks Watch 65 (2023).mp4" type="video/mp4" />
+        <!-- Add additional <source> elements for different video formats -->
+        Your browser does not support the video tag.
+      </video>
+    </div>
 </body>
 </html>
 
