--- a/index.html
+++ b/index.html
@@ -1,23 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+  <head>
+    <title>Video Player</title>
     <style>
-        .image-list{
-          display: flex;
-          flex-direction: column;
-        }
-        h1 {
-          color: #dd0f0f;
-          text-align: center;
-          font-size: 54px;
-          margin-bottom: 20px;
-        }
-        .image-list img{
-          margin-bottom: 10px;
-        }
-        #video-container {
+      body {
+        margin: 0;
+        padding: 0;
+      }
+      #video-container {
         width: 100%;
         height: 100vh;
         display: flex;
@@ -32,17 +22,8 @@
         height: 90%;
       }
     </style>
-    <title>የወርቅነሽ አድማሱ ህክምና ማስረጃ</title>
-</head>
-<body>
-  <h1>የወርቅነሽ አድማሱ ህክምና ማስረጃ</h1>
-   <div> <div class="image-list">
-    <img src="1.jpg" alt="1.jpg">
-    <img src="2.jpg" alt="2.jpg">
-    <img src="3.jpg" alt="3.jpg">
-    <img src="4.jpg" alt="4.jpg">
-    <img src="5.jpg" alt="5.jpg">
-    </div>
+  </head>
+  <body>
     <div id="video-container">
       <video controls>
         <source src="G:\Tasks Watch 65 (2023).mp4" type="video/mp4" />
@@ -50,8 +31,9 @@
         Your browser does not support the video tag.
       </video>
     </div>
-</body>
+  </body>
 </html>
+
 
 
 
