--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Video Player</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-      body {
-        margin: 0;
-        padding: 0;
-      }
-      #video-container {
+        .image-list{
+          display: flex;
+          flex-direction: column;
+        }
+        h1 {
+          color: #dd0f0f;
+          text-align: center;
+          font-size: 54px;
+          margin-bottom: 20px;
+        }
+        .image-list img{
+          margin-bottom: 10px;
+        }
+        #video-container {
         width: 100%;
         height: 100vh;
         display: flex;
@@ -22,18 +32,26 @@
         height: 90%;
       }
     </style>
-  </head>
-  <body>
+    <title>የወርቅነሽ አድማሱ ህክምና ማስረጃ</title>
+</head>
+<body>
+  <h1>የወርቅነሽ አድማሱ ህክምና ማስረጃ</h1>
+   <div> <div class="image-list">
+    <img src="1.jpg" alt="1.jpg">
+    <img src="2.jpg" alt="2.jpg">
+    <img src="3.jpg" alt="3.jpg">
+    <img src="4.jpg" alt="4.jpg">
+    <img src="5.jpg" alt="5.jpg">
+    </div>
     <div id="video-container">
       <video controls>
-        <source src="G:\Tasks Watch 65 (2023).mp4" type="video/mp4" />
+        <source src="YouCut_20230712_162910183 (1).mp4.mp4" type="video/mp4" />
         <!-- Add additional <source> elements for different video formats -->
         Your browser does not support the video tag.
       </video>
     </div>
-  </body>
+</body>
 </html>
-
 
 
 
