--- a/index.html
+++ b/index.html
@@ -18,19 +18,22 @@
           margin-bottom: 10px;
         }
         #video-container {
-        width: 100%;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: #f4f4f4;
-      }
-      video {
-        max-width: 800px;
-        max-height: 600px;
-        width: 90%;
-        height: 90%;
-      }
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 100%;
+          height: 70vh;
+          background-color: #f4f4f4;
+        }
+        video {
+          max-width: 800px;
+          max-height: 600px;
+          width: 90%;
+          height: 90%;
+          border: 2px solid #ccc;
+          border-radius: 5px;
+          box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
     </style>
     <title>የወርቅነሽ አድማሱ ህክምና ማስረጃ</title>
 </head>
@@ -47,7 +50,6 @@
       <video controls>
         <source src="YouCut_20230712_162910183 (1).mp4.mp4" type="video/mp4" />
         <!-- Add additional <source> elements for different video formats -->
-        Your browser does not support the video tag.
       </video>
     </div>
 </body>
