--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
     <img src="5.jpg" alt="5.jpg">
     </div>
     <div id="video-container">
-      <iframe width="560" height="315" src="https://www.youtube.com/watch?v=EOuz9Hw_0FM" frameborder="0" allowfullscreen></iframe>
+      <video controls>
+        <source src="YouCut_20230712_162910183 (1).mp4.mp4" type="video/mp4" />
+        <!-- Add additional <source> elements for different video formats -->
+      </video>
     </div>
 </body>
 </html>
