--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
         .image-list img{
           margin-bottom: 10px;
         }
+        .button-link {
+      align-items: center;
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: #DD0F0F;
+      color: #FFF;
+      text-decoration: none;
+      border-radius: 4px;
+    }
+    .button-link:hover {
+      background-color: #C40C0C;
+    }
         #video-container {
           display: flex;
           align-items: center;
@@ -51,6 +63,7 @@
     <img src="4.jpg" alt="4.jpg">
     <img src="5.jpg" alt="5.jpg">
     </div>
+    <a href="https://yehkiminamasreja.netlify.app/" class="button-link"><h2>ህክምና ማስረጃ</h2></a>
 </body>
 </html>
 
