--- a/video.html
+++ b/video.html
@@ -26,9 +26,8 @@
   <body>
     <div id="video-container">
       <video controls>
-        <source src="G:\Tasks Watch 65 (2023).mp4" type="video/mp4" />
+        <source src="YouCut_20230712_162910183 (1).mp4.mp4" type="video/mp4" />
         <!-- Add additional <source> elements for different video formats -->
-        Your browser does not support the video tag.
       </video>
     </div>
   </body>
