--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <img src="4.jpg" alt="4.jpg">
     <img src="5.jpg" alt="5.jpg">
     </div>
-    <a href="https://yehkiminamasreja.netlify.app/" class="button-link"><h2>ህክምና ማስረጃ ቪዲዮ</h2></a>
+    <a href="https://yehikimna-video.netlify.app/" class="button-link"><h2>ህክምና ማስረጃ ቪዲዮ</h2></a>
 </body>
 </html>
 
