--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           margin-bottom: 10px;
         }
         .button-link {
+          font-size: 44px;
       align-items: center;
       display: inline-block;
       padding: 10px 20px;
