--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
        body {
+        
           margin: 20;
           padding: 20;
           font-family: Arial, sans-serif;
         }
         .image-list{
+          margin: 20;
           display: flex;
           flex-direction: column;
         }
@@ -20,9 +22,12 @@
           margin-bottom: 20px;
         }
         .image-list img{
+          margin-left: 20px;
+          margin-right: 20px;
           margin-bottom: 10px;
         }
         .button-link {
+          margin-left: 80px;
           font-size: 44px;
       align-items: center;
       display: inline-block;
