--- a/index.html
+++ b/index.html
@@ -25,20 +25,25 @@
           margin-left: 50px;
           margin-right: 50px;
           margin-bottom: 10px;
-        }
-        .button-link {
-          margin-left: 80px;
-          font-size: 44px;
-      align-items: center;
+        }.button-link {
       display: inline-block;
       padding: 10px 20px;
       background-color: #DD0F0F;
       color: #FFF;
       text-decoration: none;
       border-radius: 4px;
+      transition: background-color 0.3s;
+      font-size: 24px;
+      margin: 10px;
     }
     .button-link:hover {
       background-color: #C40C0C;
+    }
+    @media only screen and (max-width: 600px) {
+      .button-link {
+        font-size: 20px;
+        padding: 8px 16px;
+      }
     }
         #video-container {
           display: flex;
